Minor refactoring, add unit tests, update command parsers and add a couple of new default commands, begin unification of event and packet listening system, expose packet flow to the api, add prelminary packet mappers for versions, fix yaml configuration being a bit iffy, add some additional command services, flesh out console input (tab completion), add proper logging with output to logs/latest.log, automatically pull git version